# zebradm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO  ]
benchmarks/: CMakeLists.txt  benchmark_dist_grid_creation.cpp  benchmark_radon_angle_integrator transverse.cpp  benchmark_radon_angle_integrator.cpp  benchmark_radon_anisotropic_angle_integrator.cpp  benchmark_radon_anisotropic_angle_integrator_transverse.cpp  benchmark_radon_isotropic_angle_integrator.cpp  benchmark_radon_isotropic_angle_integrator_transverse.cpp  benchmark_radon_transformer_without_response.cpp  benchmark_resp_grid_creation.cpp  benchmark_zebra_anisotropic_angle_integrator.cpp  benchmark_zebra_anisotropic_angle_integrator_transverse.cpp  benchmark_zebra_isotropic_angle_integrator.cpp  benchmark_zebra_isotropic_angle_integrator_transverse.cpp  benchmark_zebra_isotropic_angle_integrator_transverse_loop.cpp  benchmark_zebra_parallel_isotropic_angle_integrator.cpp  distributions.hpp  nanobench.h  radon_anisotropic_angle_integrator_error.cpp  radon_anisotropic_angle_integrator_transverse_error.cpp  responses.hpp  zebra_angle_integrator_error.cpp  zebra_anisotropic_angle_integrator_error.cpp  zebra_anisotropic_angle_integrator_transverse_error.cpp  zebra_convergence_demo.cpp  zebra_isotropic_angle_integrator_error.cpp  zebra_isotropic_angle_integrator_transverse_error.cpp
cmake/: FindSphinx.cmake  config.cmake.in
doc/: intro.tex
docs/: CMakeLists.txt  Doxyfile.in  conf.py  introduction.rst  usage.rst
docs/html/: .buildinfo  astro.html  celestial.html  coordinates.html  dm_example.html  genindex.html  getting_started.html  index.html  introduction.html  linalg.html  math.html  matrix.html  misc.html  objects.inv  polynomial.html  reference.html  search.html  searchindex.js  theory.html  time.html  usage.html  vector.html  zebra.html  zebra_introduction.html  zebra_theory.html  zebra_usage.html  zernike_theory.html
docs/html/.doctrees/: astro.doctree  celestial.doctree  coordinates.doctree  dm_example.doctree  environment.pickle  getting_started.doctree  index.doctree  introduction.doctree  linalg.doctree  math.doctree  matrix.doctree  misc.doctree  polynomial.doctree  reference.doctree  theory.doctree  time.doctree  usage.doctree  vector.doctree  zebra.doctree  zebra_introduction.doctree  zebra_theory.doctree  zebra_usage.doctree  zernike_theory.doctree
docs/html/_sources/: astro.rst.txt  coordinates.rst.txt  dm_example.rst.txt  getting_started.rst.txt  index.rst.txt  introduction.rst.txt  linalg.rst.txt  matrix.rst.txt  theory.rst.txt  vector.rst.txt
docs/src/: astro.rst  celestial.rst  dm_example.rst  getting_started.rst  index.rst  introduction.rst  linalg.rst  math.rst  polynomial.rst  reference.rst  time.rst  usage.rst  zebra.rst  zebra_introduction.rst  zebra_theory.rst  zebra_usage.rst  zernike_theory.rst
examples/: CMakeLists.txt  anisotropic.cpp  lab_radon_example  lab_radon_example.cpp  lab_radon_example.py  transverse_radon_eaxmple.cpp  transverse_radon_example.cpp
include/: affine_legendre.hpp  affine_legendre_integral.hpp  align_z.hpp  astro.hpp  atomic.hpp  celestial.hpp  concepts.hpp  coordinate_transforms.hpp  dark_matter.hpp  distributions.hpp  eft.hpp  electron_rate.hpp  element.hpp  identity.hpp  isotope.hpp  isotropic_zernike.hpp  isotropic_zernike_recursion.hpp  legendre.hpp  linalg.hpp  matrix.hpp  multi_span.hpp  nuclear.hpp  nuclear_eft.hpp  periodic_table.hpp  polynomial.hpp  radon_integrator.hpp  radon_transformer.hpp  radon_util.hpp  rates.hpp  rigid_transform.hpp  rotation.hpp  time.hpp  transform_conventions.hpp  transform_utilities.hpp  translation.hpp  types.hpp  utility.hpp  vector.hpp  velocity_distribution.hpp  zebra_angle_integrator.hpp  (+7 more)
include/coordinates/: astro_parameters.hpp  celestial_transform.hpp  coordinate_functions.hpp  galilean_transform.hpp  time.hpp
src/: affine_legendre.cpp  affine_legendre_integral.cpp  dark_matter.cpp  legendre.cpp  radon_integrator.cpp  radon_transformer.cpp  radon_util.cpp  time.cpp  utility.cpp  zebra_angle_integrator.cpp  zebra_angle_integrator_core.cpp  zebra_parallel_angle_integrator.cpp  zebra_radon.cpp  zernike_recursion.cpp  zernike_recursions.cpp
src/coordinates/: README.md  time.cpp
tests/: CMakeLists.txt  exp_affine_legendre_integral.cpp  exp_zebra_convergence.cpp  test_affine_legendre.cpp  test_affine_legendre_integral.cpp  test_astro.cpp  test_celestial.cpp  test_legendre_recursion.cpp  test_linalg.cpp  test_mutual_convergence.cpp  test_polynomial.cpp  test_radon_angle_integrator.cpp  test_radon_integrator.cpp  test_radon_transformer.cpp  test_radon_util.cpp  test_time.cpp  test_transform_utilities.cpp  test_zebra_angle_integrator.cpp  test_zebra_anisotropic_angle_integrator.cpp  test_zebra_isotropic_angle_integrator.cpp  test_zebra_isotropic_transverse_angle_integrator.cpp  test_zebra_radon.cpp  test_zebra_util.cpp  test_zernike_recursions.cpp  test_zonal_glq_transformer.cpp
